--- a/JupiHealth.csproj
+++ b/JupiHealth.csproj
@@ -66,6 +66,9 @@
 	  <MauiXaml Update="ConsumingPage.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="SettingsPage.xaml">
+	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 	<ItemGroup>
