Мінорні зміни та відкриття в плані бази даних

--- a/JupiHealth.csproj
+++ b/JupiHealth.csproj
@@ -72,13 +72,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="ConsumingPage.xaml">
+	  <MauiXaml Update="Pages\ConsumingPage.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="MedsSettings.xaml">
+	  <MauiXaml Update="Pages\MedsSettings.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="SettingsPage.xaml">
+	  <MauiXaml Update="Pages\SettingsPage.xaml">
 	    <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
 	  </MauiXaml>
 	</ItemGroup>
