Покращення в роботі списків прогресу та графіку на день, зміни в структурі таблиць MedicineProgress та TodaysSchedule

--- a/JupiHealth.csproj
+++ b/JupiHealth.csproj
@@ -21,7 +21,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>HealthApp</ApplicationTitle>
+		<ApplicationTitle>JupiHealth</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.healthapp</ApplicationId>
